--- a/index.html
+++ b/index.html
@@ -87,7 +87,14 @@
                             <img class="link-each-image" data-src="assets/images/facebook.png" src="assets/images/facebook.png" alt="Facebook @ [User]"/>
                             <span class=" item-title text-center">Facebook @Vogue Rooms</span>
                         </a>
-                    </div>                    
+                    </div>
+                    <div class="page-item-wrap relative">
+                        <div class="page-item flex-both-center absolute"></div>
+                        <a target="_blank"  class="page-item-each py-10 flex-both-center" href="https://www.facebook.com/share/1573h3NZp1/" data-id="261685" data-type="page_item">
+                            <img class="link-each-image" data-src="assets/images/tiktok.png" src="assets/images/tiktok.png" alt="Facebook @ [User]"/>
+                            <span class=" item-title text-center">Tiktok @Vogue_rooms</span>
+                        </a>
+                    </div>
                 </div>                                                                                
             </div>
         </div>
